--- a/projectFolder/home/templates/home/auth.html
+++ b/projectFolder/home/templates/home/auth.html
@@ -1,17 +1,15 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Auth</title>
-        <style>
-            .h1 {
-                text-align: center;
-                margin-top: 50px;
-            }
-        </style>
+        <title>Authentication</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     </head>
 
     <body>
-        <h2 class="h1">This is restricted Page.</h2>
+        <img src="https://maxmautner.com/public/images/django.gif" class="img"/>
+        <h2 class="title center">This is restricted Page.</h2>
     </body>
 
 </html>
