--- a/projectFolder/note/templates/note/noteDetail.html
+++ b/projectFolder/note/templates/note/noteDetail.html
@@ -1,26 +1,15 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Note Detail</title>
-        <style>
-            .body {
-                width: 60%;
-                margin: auto
-            }
-            .h1 {
-                text-align: left;
-                margin-top: 50px;
-            }
-            .p {
-                text-align: left;
-                border-bottom: 1px solid rgba(129, 127, 127, 0.167);
-                padding-bottom: 10px;
-            }
-        </style>
+        <title>Notes Detail</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     </head>
 
-    <body class="body">
-        <h1 class="h1">{{note.title}}</h1>
+    <body>
+        <img src="https://maxmautner.com/public/images/django.gif" class="img"/>
+        <h1 class="title">{{note.title}}</h1>
         <p class="p">{{note.text}}</p>
     </body>
 
