This commit for add link/href for navigate one to another page...

--- a/projectFolder/home/templates/home/welcome.html
+++ b/projectFolder/home/templates/home/welcome.html
@@ -9,8 +9,11 @@
 
     <body>
         <img src="https://maxmautner.com/public/images/django.gif" class="img"/>
-        <h1 class="title center">Welcome on my Django site.</h1>
+        <h1 class=" center">Welcome on my Django site.</h1>
         <p class="p center">Today is {{today}}</p>
+        <p class="p center mt30">
+            <a href="{% url 'note.list' %}" class="link-btn" >CHECK MY NOTES</a>
+        </p>
     </body>
 
 </html>
