--- a/projectFolder/static/css/style.css
+++ b/projectFolder/static/css/style.css
@@ -1,3 +1,26 @@
+/* * {
+    padding: 0px;
+    margin: 0px;
+} */
+.center {
+    text-align: center;
+}
+.mt10 {
+    margin-top: 10px;
+}
+.mt15 {
+    margin-top: 15px;
+}
+.mt20 {
+    margin-top: 20px;
+}
+.mt30 {
+    margin-top: 30px;
+}
+.link {
+    color: black;
+    text-decoration-line: none;
+}
 body {
     width: 60%;
     margin: auto;
@@ -22,6 +45,12 @@ body {
     border-bottom: 1px solid rgba(129, 127, 127, 0.167);
     padding-bottom: 10px;
 }
-.center {
-    text-align: center;
+
+
+.link-btn {
+    background-color: #390909;
+    color: aliceblue;
+    border-radius: 10px;
+    padding: 10px 30px;
+    text-decoration-line: none;
 }
