--- a/projectFolder/static/templates/base.html
+++ b/projectFolder/static/templates/base.html
@@ -5,11 +5,20 @@
     <head>
         <title>Template</title>
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+
+        <!-- <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> -->
     </head>
 
     <body>
-        {% block content %}
-        {% endblock %}
+        <div class="my-5 text-center container">
+            {% block content %}
+            {% endblock %}
+        </div>
     </body>
 
 </html>
