--- a/projectFolder/note/templates/note/noteDetail.html
+++ b/projectFolder/note/templates/note/noteDetail.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
     {% block content %}
-        <img src="https://maxmautner.com/public/images/django.gif" class="img"/>
-        <h1 class="title">{{note.title}}</h1>
+        <!-- <img src="https://maxmautner.com/public/images/django.gif" class="img"/> -->
+        <p class="left">
+            <a href="{% url 'note.list'%}" class="link-btn">Back</a>
+        </p><h1 class="title">{{note.title}}</h1>
         <p class="p">{{note.text}}</p>
     {% endblock%}
 
