--- a/projectFolder/static/css/style.css
+++ b/projectFolder/static/css/style.css
@@ -5,6 +5,12 @@
 .center {
     text-align: center;
 }
+.left {
+    text-align: left;
+}
+.right {
+    text-align: right;
+}
 .mt10 {
     margin-top: 10px;
 }
@@ -24,6 +30,7 @@
 body {
     width: 60%;
     margin: auto;
+    /* background-color: rgba(227, 225, 225, 0.927); */
 }
 .img {
     width: 40%;
@@ -51,6 +58,36 @@ body {
     background-color: #390909;
     color: aliceblue;
     border-radius: 10px;
-    padding: 10px 30px;
+    padding: 8px 20px;
     text-decoration-line: none;
+}
+
+.sub-btn {
+    background-color: #390909;
+    color: #fff;
+}
+
+.button {
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    /* margin: 4px 2px; */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 7px;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 1px solid #390909;
+}
+
+.button1:hover {
+  background-color: #390909;
+  color: white;
 }
