--- a/projectFolder/static/templates/base.html
+++ b/projectFolder/static/templates/base.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <div class="my-5 text-center container">
+        <div class="my-5 text-center container" style="margin-top: 30px;">
             {% block content %}
             {% endblock %}
         </div>
