--- a/projectFolder/static/css/style.css
+++ b/projectFolder/static/css/style.css
@@ -91,3 +91,25 @@ body {
   background-color: #390909;
   color: white;
 }
+
+/* FOR FORM */
+.title-input {
+    font-size: 20px;
+}
+.text-input {
+    font-size: 20px;
+}
+
+
+table, td, th {
+  border: 1px solid lightgray;
+}
+.td {
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
