This commit for add signup, login and logout pages...

--- a/projectFolder/note/templates/note/noteDetail.html
+++ b/projectFolder/note/templates/note/noteDetail.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
     {% block content %}
-        <!-- <img src="https://maxmautner.com/public/images/django.gif" class="img"/> -->
-        <p class="left">
-            <a href="{% url 'note.list'%}" class="link-btn">Back</a>
-        </p><h1 class="title">{{note.title}}</h1>
-        <p class="p">{{note.text}}</p>
+        <p class="left ml30">
+            <a href="{% url 'note.list'%}" class="link-btn">BACK</a>
+        </p>
+        <div class="myForm">
+            <!-- <img src="https://maxmautner.com/public/images/django.gif" class="img"/> -->
+            <div class="mt30">
+                <h1 class="title">{{note.title}}</h1>
+                <p class="p">{{note.text}}</p>
+            </div>
+        </div>
     {% endblock%}
