--- a/projectFolder/home/templates/home/welcome.html
+++ b/projectFolder/home/templates/home/welcome.html
@@ -8,8 +8,8 @@
     </head>
 
     <body>
-        <img src="https://maxmautner.com/public/images/django.gif" class="img"/>
-        <h1 class=" center">Welcome on my Django site.</h1>
+        <img src="https://maxmautner.com/public/images/django.gif" class="img" height="250px"/>
+        <h1 class=" center">Welcome On My Django Site.</h1>
         <p class="p center">Today is {{today}}</p>
         <p class="p center mt30">
             <a href="{% url 'note.list' %}" class="link-btn" >CHECK MY NOTES</a>
