--- a/projectFolder/note/templates/note/notes_confirm_Delete.html
+++ b/projectFolder/note/templates/note/notes_confirm_Delete.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <form
-        class="mt30"
-        method="POST"
-    >
-        {% csrf_token %}
-        <h2 class="center">Are you sure you want to delete "{{notes.title|truncatechars:15}}"</h2>
-        <h4 class="center">This action can't be undone</h4>
-        <button type="submit" class="button button1 center" color="#390909">Confirm</button>
-    </form>
+    <p class="left ml30">
+        <a href="{% url 'note.list'%}" class="link-btn">BACK</a>
+    </p>
+    <div class="myForm">
+        <form class="mt30" method="POST">
+            {% csrf_token %}
+            <div style="width:100%">
+                <h2 class="center">
+                    Are you sure you want to delete
+                    <br>"{{notes.title|truncatechars:25}}"
+                    <br>this note.?
+                </h2>
+                <h4 class="center">This action can't be undone if you clicked on confirm.</h4>
+            </div>
+            <div style="width:60%; margin: auto;">
+                <button type="submit" class="button button30 button50A" style="background-color: red;border: none;">CONFIRM</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
