--- a/projectFolder/note/templates/note/notes_form.html
+++ b/projectFolder/note/templates/note/notes_form.html
@@ -1,17 +1,15 @@
 {% extends "base.html" %}
 
     {% block content %}
-        <div class="mt30">
-            <p class="left">
-                <a href="{% url 'note.list'%}" class="link-btn">Back</a>
-            </p>
-            <form
-                class="mt30"
-                method="POST"
-            >
+        <p class="left ml30">
+            <a href="{% url 'note.list'%}" class="link-btn">Back</a>
+        </p>
+        <h2 class="center">Edit Note</h2>
+        <div class="myForm mt30">
+            <form class="mt30" method="POST">
                 {% csrf_token %}
                 {{ form }}
-                <button type="submit" class="button button1" color="#390909">SUBMIT</button>
+                <button type="submit" class="button button50 button50A">SUBMIT</button>
             </form>
         </div>
     {% endblock%}
