--- a/projectFolder/static/templates/base.html
+++ b/projectFolder/static/templates/base.html
@@ -5,6 +5,7 @@
     <head>
         <title>Template</title>
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" />
 
         <!-- <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
