--- a/projectFolder/home/templates/home/login.html
+++ b/projectFolder/home/templates/home/login.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
+{% load static %}
 
-    {% block content %}
-        <div class="mt30">
-            <!-- <p class="left">
-                <a href="{% url 'note.list'%}" class="link-btn">Back</a>
-            </p> -->
+{% block content %}
+    <head>
+        <title>LOG IN</title>
+    </head>
 
-            <img src="https://maxmautner.com/public/images/django.gif" class="img" height="200px"/>
-            <div style="width:50%; background-color: aqua; margin: auto;padding: 40px; border-radius: 10px;">
-                <form method="POST" class="center">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="loginButton loginButton1" color="#390909">LOG IN</button>
-                </form>
-            </div>
+    <div>
+        <img src="{% static 'icons/logo.gif' %}" class="logo"/>
+        <div style="width: max-content; background-color: aqua; margin: auto; padding: 40px 60px; border-radius: 10px;">
+            <form method="POST" class="center">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="loginButton loginButton1">LOG IN</button>
+            </form>
         </div>
-    {% endblock%}
+    </div>
+{% endblock%}
