--- a/projectFolder/home/templates/home/logout.html
+++ b/projectFolder/home/templates/home/logout.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load static %}
 
-    {% block content %}
-        <div class="mt30">
-            <!-- <p class="left">
-                <a href="{% url 'note.list'%}" class="link-btn">Back</a>
-            </p> -->
+{% block content %}
+    <head>
+        <title>LOG OUT</title>
+    </head>
 
-            <img src="https://maxmautner.com/public/images/django.gif" class="img" height="200px"/>
-            <div style="width:50%; background-color: aqua; margin: auto;padding: 40px; border-radius: 10px;">
-                <h2 class="center">Hope to see you soon :)</h2>
-            </div>
+    <div class="mt30">
+        <img src="{% static 'icons/logo.gif' %}" class="logo"/>
+        <div style="width: max-content; background-color: aqua; margin: auto;padding: 40px 60px; border-radius: 10px;">
+            <h2 class="center">Hope to see you soon :)</h2>
         </div>
-    {% endblock%}
+    </div>
+{% endblock%}
