--- a/projectFolder/note/templates/note/noteDelete.html
+++ b/projectFolder/note/templates/note/noteDelete.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p class="left ml30">
+    <head>
+        <title>DELETE NOTE</title>
+    </head>
+
+    <p class="right mr30">
         <a href="{% url 'note.list'%}" class="link-btn">BACK</a>
     </p>
     <div class="myForm">
@@ -13,10 +17,10 @@
                     <br>"{{notes.title|truncatechars:25}}"
                     <br>this note.?
                 </h2>
-                <h4 class="center">This action can't be undone if you clicked on confirm.</h4>
+                <h4 class="center">This action can't be undone if you clicked on confirm button.</h4>
             </div>
             <div style="width:60%; margin: auto;">
-                <button type="submit" class="button button30 button50A" style="background-color: red;border: none;">CONFIRM</button>
+                <button type="submit" class="button button30 button50A" style="background-color: #F00; border: none;">CONFIRM</button>
             </div>
         </form>
     </div>
