--- a/projectFolder/note/templates/note/noteDetail.html
+++ b/projectFolder/note/templates/note/noteDetail.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 
-    {% block content %}
-        <p class="left ml30">
-            <a href="{% url 'note.list'%}" class="link-btn">BACK</a>
-        </p>
-        <div class="myForm">
-            <!-- <img src="https://maxmautner.com/public/images/django.gif" class="img"/> -->
-            <div class="mt30">
-                <h1 class="title">{{note.title}}</h1>
-                <p class="p">{{note.text}}</p>
-            </div>
-        </div>
-    {% endblock%}
+{% block content %}
+    <head>
+        <title>DELETE NOTE | {{note.title|truncatechars:10}} </title>
+    </head>
+
+    <p class="right mr30 mt20">
+        <a href="{% url 'note.list'%}" class="link-btn">BACK</a>
+    </p>
+    <div class="myForm mt30">
+        <h1 class="title">{{note.title}}</h1>
+        <p class="p-detail pb30" style="width: 100%;">{{note.text}}</p>
+    </div>
+{% endblock%}
