--- a/projectFolder/static/css/custom.css
+++ b/projectFolder/static/css/custom.css
@@ -1,3 +1,16 @@
+/* TOP header */
+.topHeader {
+    border-bottom: 0.5px solid lightgray;
+    background-color: #390909;
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    right: 0px;
+    left: 0px;
+    top: 0px;
+}
+
+
 /* LARGE BUTTON */
 /* .large-button {
     transition-duration: 0.4s;
@@ -56,4 +69,88 @@
 .button50A:hover {
     background-color: white;
     color: #390909;
+}
+
+/* NAV BAR */
+.topnav {
+    overflow: hidden;
+    background-color: #390909;
+    position: fixed;
+    width: 100%;
+    right: 0px;
+    left: 0px;
+    top: 0px;
+}
+.topnav a {
+  float: right;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ffffff;
+  color: black;
+}
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+/* end nav bar */
+
+.p-detail {
+    color: rgb(147 148 149);
+    letter-spacing: 1.5px;
+    font-style: oblique;
+    line-height: 25px;
+    font-size: 18px;
+    margin: auto;
+    width: 98%;
+}
+
+@media (min-width: 300px) and (max-width: 500px) {
+    .topnav a {
+        float: right;
+        color: white;
+        text-align: center;
+        padding: 10px 14px;
+        text-decoration: none;
+        font-size: 14px;
+    }
+    .button20 {
+        width: 35%;
+    }
+}
+@media (min-width: 501px) and (max-width: 900px) {
+    .button20 {
+        width: 30%;
+    }
+}
+@media (min-width: 901px) and (max-width: 1100px) {
+    .button20 {
+        width: 25%;
+    }
+}
+
+/* FOOTER */
+.footer {
+    background-color: rgba(0, 0, 0, 0.061);
+    position: fixed;
+    clear: both; 
+    bottom: 0px;
+    width: 100%;
+}
+.footer-text {
+    font-weight: 500;
+    font-size: 14px;
+    width: 100%;
+}
+
+/* COLORS */
+.color-white {
+    color: #FFF;
+}
+.color-black {
+    color: #000;
 }
