--- a/projectFolder/static/css/style.css
+++ b/projectFolder/static/css/style.css
@@ -77,20 +77,28 @@
 .pt {
     padding-top: 30px;
 }
+.pb30 {
+    padding-bottom: 30px;
+}
 
 body {
     /* background-color: rgba(227, 225, 225, 0.927); */
+    /* font-family: Arial, Helvetica, sans-serif; */
     margin: auto;
     width: 100%;
 }
-
+.body {
+    padding-bottom: 20px;
+    margin-top: 70px;
+}
 .link {
     text-decoration-line: none;
     color: black;
 }
-.img {
+.logo {
     margin-left: 30%;
     width: 40%;
+    height: 250px;
 }
 .title {
     text-align: left;
@@ -110,6 +118,7 @@ body {
     background-color: #390909;
     text-decoration-line: none;
     text-transform: uppercase;
+    transition-duration: 0.4s;
     border-radius: 8px;
     padding: 8px 30px;
     color: white;
@@ -149,15 +158,15 @@ body {
     margin: auto;
 }
 .input {
-    font-size: 16px;
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 8px 7px;
     background-color: #e2e2e27d;
+    margin-bottom: 20px;
     border-width: 0.5px;
     border-style: solid;
-    border-radius: 5px;
     letter-spacing: 1px;
+    border-radius: 5px;
+    padding: 8px 7px;
+    font-size: 16px;
+    width: 100%;
 }
 .title-input {
 }
@@ -166,22 +175,78 @@ body {
 label {
     color: rgb(117, 112, 112);
     text-transform: capitalize;
+    text-align: left;
     font-weight: 600;
     margin-left: 6px;
     font-size: 16px;
     width: 100%;
 }
 
+.icon {
+    /* height: 25px; */
+    padding: 2px;
+}
 
-table, td, th {
-  border: 1px solid lightgray;
+/* FOR MOBILE DEVICE 300px to 425px */
+@media (min-width: 300px) and (max-width: 500px) {
+    .myForm {
+        width: 90%;
+        margin: auto;
+    }
+    .img {
+        margin-left: 20%;
+        /* margin: auto; */
+        width: 60%;
+        height: 200px;
+    }
+    .body {
+        margin-top: 50px;
+    }
+    .icon {
+        height: 20px;
+    }
+    .item-right {
+        padding-right: 10px;
+        margin-top: 10px;
+    }
 }
-.td {
+@media (min-width: 501px) and (max-width: 900px) {
+    .myForm {
+        width: 80%;
+        margin: auto;
+    }
+}
+@media (min-width: 901px) and (max-width: 1100px) {
+    .myForm {
+        width: 70%;
+        margin: auto;
+    }
+}
+@media (min-width: 1101px) and (max-width: 1500px) {
+    .myForm {
+        width: 60%;
+        margin: auto;
+    }
+}
+
+input {
+    /* width: 100%; */
+    /* height: 40px; */
+}
+
+
+.item-div {   
+    border-bottom: 1px solid lightgray;
     padding-bottom: 10px;
-    padding-left: 15px;
-    padding-top: 10px;
-}
-table {
-    border-collapse: collapse;
+    margin-bottom: 25px;
+    clear: both;
+    float: right;
     width: 100%;
+}
+.item-left {
+    padding-left: 1px;
+}
+.item-right {
+    padding-right: 10px;
+    margin-top: 2px;
 }
