--- a/projectFolder/static/templates/base.html
+++ b/projectFolder/static/templates/base.html
@@ -3,12 +3,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template</title>
+        <!-- <title>Template</title> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" />
 
-        <!-- <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -16,11 +17,28 @@
     </head>
 
     <body>
-        <div class="my-5 text-center container" style="margin-top: 30px;">
+        <div class="topnav">
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout'%}" >LOGOUT</a>
+                <a href="{% url 'note.new'%}" >CREATE</a>
+                <a href="{% url 'note.list'%}" >NOTES</a>
+            {% else %}
+                <a href="{% url 'login'%}" >LOG IN</a>
+                <a href="{% url 'signup'%}" >SIGN UP</a>
+            {% endif %}
+            <a href="{% url 'welcome'%}" >HOME</a>
+        </div>
+
+        <div class="body">
             {% block content %}
             {% endblock %}
         </div>
+
+        <footer class="footer">
+            <p class="center color-black footer-text">
+                Design & Develop by 
+                <a class="center color-black p-detail" href="https://www.linkedin.com/in/asadmumtaz92/" target="_blank">Malick Asad </a></p>
+        </footer>
     </body>
 
 </html>
-
